--- a/app/views/todo/_form.html.haml
+++ b/app/views/todo/_form.html.haml
@@ -1,11 +1,11 @@
-= form_for @todo do |f|
-  - if @todo.errors.any?
+= form_for @new_todo do |f|
+  - if @new_todo.errors.any?
     #error_explanation
       %h2
-        = pluralize @todo.errors.count, "error"
-        prohibited this odo from being saved:
+        = pluralize @new_todo.errors.count, "error"
+        prohibited this new_todo from being saved:
       %ul
-        - @todo.errors.full_messages.each do |message|
+        - @new_todo.errors.full_messages.each do |message|
           %li= message
   .field
     = f.label :title
@@ -13,7 +13,5 @@
       = f.text_field :title
   .field
     = f.label :due_to
-    %br
-      = f.text_field :cart_id
   .actions
     = f.submit
