--- a/app/views/todo/index.html.haml
+++ b/app/views/todo/index.html.haml
@@ -1,5 +1,7 @@
 - @todos.each do |td|
-    td.title 
-    td.created_at 
+  td.title 
+  td.created_at 
 
-= button_to "New todo list", todos_new_path
+= link_to "New todo list","#", id: "new-todo"
+#new_todo_form
+= render "form"
