--- a/app/views/todos/_form.html.haml
+++ b/app/views/todos/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @new_todo do |f|
+= form_for @new_todo, url: todo_create_path, remote:true do |f|
   - if @new_todo.errors.any?
     #error_explanation
       %h2
