--- a/app/views/todos/_form.html.haml
+++ b/app/views/todos/_form.html.haml
@@ -3,7 +3,7 @@
     #error_explanation
       %h2
         = pluralize @new_todo.errors.count, "error"
-        prohibited this new_todo from being saved:
+        prohibited this todo from being saved:
       %ul
         - @new_todo.errors.full_messages.each do |message|
           %li= message
@@ -11,6 +11,8 @@
     = f.label :title
     %br
       = f.text_field :title
+    %br
+      = f.datetime_select :due_to, min: Date.today
   .field
     = f.label :due_to
   .actions
