--- a/app/views/welcome/home.html.haml
+++ b/app/views/welcome/home.html.haml
@@ -1,2 +1,6 @@
-<h1>Welcome#home</h1>
-<p>Find me in app/views/welcome/home.html.erb</p>
+.container
+  .row
+    .col-md-6
+      = link_to "Lists", lists_path
+    .col-md-6
+      = link_to "Todos", todos_path
