--- a/app/views/lists/index.html.haml
+++ b/app/views/lists/index.html.haml
@@ -1,6 +1,8 @@
-#lists
-= render @lists
-
-= link_to "New list","#", id: "new-list"
-#new_list_form
-  = render "form"
+.container
+  .row#lists
+    = render @lists
+  .row
+    .col-md-12
+      = link_to "New list","#", id: "new-list"
+      #new_list_form
+        = render "form"
