--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Workspace</title>
+  <title>Improv</title>
   <%= stylesheet_link_tag "application", controller_name %>
   <%= javascript_include_tag "application", controller_name %>
   <%= csrf_meta_tags %>
