Implementation of materialize (with boostrap)

--- a/app/views/welcome/home.html.haml
+++ b/app/views/welcome/home.html.haml
@@ -1,8 +1,8 @@
 .container
   .row
     .col-md-6
-      = link_to lists_path, class: "btn-sharp btn-sharp-lists" do
+      = link_to lists_path, class: "waves-effect waves-light btn-large" do
         Lists
     .col-md-6
-      = link_to todos_path, class: "btn-sharp btn-sharp-todos" do
+      = link_to todos_path, class: "waves-effect waves-light btn-large" do
         Todos
