--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,3 +16,8 @@
  
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+@import "materialize/components/color";
+$primary-color: color("blue", "lighten-2") !default;
+@import "materialize";
+@import "materialize/extras/nouislider";
