Nested forms for list, bootstrap removal

--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -7,3 +7,9 @@
   padding-top: 20px;
   padding-bottom: 20px;
 }
+
+.waves-effect.waves-brown .waves-ripple {
+  /* The alpha value allows the text and background color
+  of the button to still show through. */
+  background-color: rgba(179, 0, 255, 0.65);
+}
