--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,11 +13,12 @@
  *= require_tree .
  *= require_self
  */
- 
+
+/* 
 @import "bootstrap-sprockets";
 @import "bootstrap";
-
+*/
 @import "materialize/components/color";
-$primary-color: color("blue", "lighten-2") !default;
+$primary-color: color("blue-grey", "darken-1") !default;
 @import "materialize";
 @import "materialize/extras/nouislider";
