--- a/app/views/lists/index.html.haml
+++ b/app/views/lists/index.html.haml
@@ -1,8 +1,10 @@
 .container
-  .row#lists
-    = render @lists
   .row
-    .col-md-12
-      = link_to "New list","#", id: "new-list"
+    .col.s12
+      = link_to "#", class: "waves-effect waves-brown btn", id: "new-list" do
+        New list
+        %i.material-icons.left cloud
       #new_list_form
         = render "form"
+  .row#lists
+    = render @lists
