jquery adnimations, destroy list method

--- a/app/views/lists/index.html.haml
+++ b/app/views/lists/index.html.haml
@@ -1,10 +1,17 @@
+:javascript
+  $(document).ready(function(){
+      $("#new-list-button").click(function(){
+          $("#new-list-form").slideToggle( "slow" );
+      });
+  });
 .container
   .row
     .col.s12
-      = link_to "#", class: "waves-effect waves-brown btn", id: "new-list" do
+      = link_to "#", class: "waves-effect waves btn blue-grey darken-4", id: "new-list-button" do
         New list
-        %i.material-icons.left cloud
-      #new_list_form
+        %i.material-icons.left playlist_add
+      #new-list-form
         = render "form"
   .row#lists
     = render @lists
+
