--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -3,17 +3,17 @@
     .nav-wrapper.container
       %a.brand-logo{:href => "/"} Improv
       %ul.right.hide-on-med-and-down
-        %li
-        = link_to lists_path, class: "" do
-          Lists
-          %i.material-icons.left list
-        = link_to todos_path, class:"" do
-          Todos
-          
         - if user_signed_in?
           %li
             = link_to "Sign out", destroy_user_session_path, :method => :delete
         - else
           %li
             = link_to "Sign in", new_user_session_path 
-            = link_to "Sign up", new_user_registration_path 
+            = link_to "Register", new_user_registration_path 
+        %li
+        = link_to lists_path, class: "" do
+          Lists
+          %i.material-icons.left list
+        = link_to todos_path, class:"" do
+          Todos
+          %i.material-icons.left done
