--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -8,8 +8,19 @@
   padding-bottom: 20px;
 }
 
+#new-list-form {
+  display: none;
+}
+
 .waves-effect.waves-brown .waves-ripple {
   /* The alpha value allows the text and background color
   of the button to still show through. */
   background-color: rgba(179, 0, 255, 0.65);
+}
+
+.collapsible-without-borders {
+  border-top: 0;
+  border-right: 0;
+  border-left: 0;
+  margin: 0;
 }
