--- a/app/views/lists/_form.html.haml
+++ b/app/views/lists/_form.html.haml
@@ -1,4 +1,4 @@
-= semantic_form_for @new_list, url: list_create_path, remote:true do |f|
+= semantic_form_for @new_list, remote: true do |f|
   -if @new_list.errors.any?
     #error_explanation
       %h2= "#{pluralize(@new_list.errors.count, "error")} prohibited this project from being saved:"
@@ -7,7 +7,7 @@
           %li= msg
   = f.inputs do
     = f.input :title
-    %h3 Items
+    %h4 Items
     #items
       = f.semantic_fields_for :list_items do |item|
         = render 'item_fields', f: item
@@ -15,6 +15,3 @@
         = link_to_add_association 'add item', f, :list_items
   = f.actions do
     = f.action :submit
-    
-    
-    
