--- a/app/views/lists/_list.html.haml
+++ b/app/views/lists/_list.html.haml
@@ -1,8 +1,17 @@
 .col.s6
-  %ul.collection.with-header
-    %li.collection-item 
-    = list.title
-  = list.list_items.each_with_index do |item, index|
-    index + 1
-    item.content
-  %br
+  %div{:id => "list-#{list.id}"}
+    %ul.collection.hoverable
+      %ul.collapsible.collapsible-without-borders{"data-collapsible" => "accordion"}
+        %li
+          .collapsible-header.blue-grey.darken-1.white-text
+            %i.material-icons> filter_drama
+            = list.title
+          .collapsible-body
+            = button_to list, remote: true, method: :delete, data: { confirm: 'Are you sure?' }, class: "waves-effect waves-light btn red" do
+              %i.material-icons delete
+      - list.list_items.each_with_index do |item, index|
+        %li.collection-item
+          = "#{index + 1}. #{item.content}"
+        
+
+      
