--- a/app/views/welcome/home.html.haml
+++ b/app/views/welcome/home.html.haml
@@ -1,1 +1,4 @@
-%img{:src => "http://i.imgur.com/TTmQo3Z.png"}/
+%img{:src => "https://cdn.meme.am/instances/500x/38365969.jpg"}/
+%img{:src => "http://www.nikola-breznjak.com/blog/wp-content/uploads/2014/11/MVClady.jpg"}/
+%img{:src => "http://cdn.meme.am/instances/66672062.jpg"}/
+/%img{:src => "http://i.imgur.com/TTmQo3Z.png"}/
