--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -24,3 +24,17 @@
   border-left: 0;
   margin: 0;
 }
+
+.word-break {
+  word-break: break-all;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  hyphens: auto;
+}
+
+.list-item-index {
+  font-size: 20px;
+  font-weight: bold;
+}
