--- a/app/views/lists/_form.html.haml
+++ b/app/views/lists/_form.html.haml
@@ -1,16 +1,16 @@
-= semantic_form_for @new_list, remote: true do |f|
-  -if @new_list.errors.any?
+= semantic_form_for @list, remote: true do |f|
+  -if @list.errors.any?
     #error_explanation
-      %h2= "#{pluralize(@new_list.errors.count, "error")} prohibited this project from being saved:"
+      %h2= "#{pluralize(@list.errors.count, "error")} prohibited this project from being saved:"
       %ul
-        - @new_list.errors.full_messages.each do |msg|
+        - @list.errors.full_messages.each do |msg|
           %li= msg
   = f.inputs do
     = f.input :title
     %h4 Items
     #items
-      = f.semantic_fields_for :list_items do |item|
-        = render 'item_fields', f: item
+      = f.semantic_fields_for :list_items do |list_item|
+        = render 'item_fields', f: list_item
       .links
         = link_to_add_association 'add item', f, :list_items
   = f.actions do
