--- a/app/views/lists/destroy.js.erb
+++ b/app/views/lists/destroy.js.erb
@@ -1,3 +1,3 @@
-$("#list-<%= @list.id %>").slideUp("normal", function() {
+$("#list_<%= @list.id %>").slideUp("normal", function() {
     $(this).remove();
 });
