--- a/app/views/lists/_list.html.haml
+++ b/app/views/lists/_list.html.haml
@@ -1,12 +1,12 @@
-.col.s6
-  %ul.collection.hoverable
-    %ul.collapsible-without-borders.collapsible{"data-collapsible" => "accordion"}
-      %li
-        .collapsible-header.blue-grey.darken-1.white-text
-          %i.material-icons> filter_drama
-          = list.title
-        .collapsible-body
-          = div_for list do
+= div_for list do
+  .col.s6
+    %ul.collection.hoverable
+      %ul.collapsible-without-borders.collapsible{"data-collapsible" => "accordion"}
+        %li
+          .collapsible-header.blue-grey.darken-1.white-text
+            %i.material-icons> filter_drama
+            = list.title
+          .collapsible-body
             %br
             .container
               .row
@@ -14,14 +14,13 @@
                   = button_to list, remote: true, method: :delete, data: { confirm: 'Are you sure?' }, class: "waves-effect waves-light btn-floating red" do
                     %i.material-icons delete
                   Delete
-                  
                 .col.s6.center-align
                   = button_to edit_list_path(list), remote: :true, method: :get, class: "btn-floating blue", id: "list-modal-button" do
                     %i.material-icons mode_edit
                   Edit list
-
-    - list.list_items.each_with_index do |item, index|
-      %li.collection-item.word-break
-        %span.list-item-index
-          = "#{index + 1}. "
-        = item.content
+      .collection-items
+        - list.list_items.each_with_index do |item, index|
+          %li.collection-item.word-break
+            %span.list-item-index
+              = "#{index + 1}. "
+            = item.content
