--- a/app/views/lists/edit.js.erb
+++ b/app/views/lists/edit.js.erb
@@ -1,1 +1,2 @@
-$('div#<%= dom_id(@list) %>').replaceWith('<%= j render("form") %>');
+$("div#<%= dom_id(@list) %> .container").replaceWith('<%= j render("form") %>');
+$("div#<%= dom_id(@list) %> .collection-items").remove();
