--- a/app/views/lists/_form.html.haml
+++ b/app/views/lists/_form.html.haml
@@ -1,17 +1,16 @@
 = semantic_form_for @list, remote: true do |f|
-  -if @list.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@list.errors.count, "error")} prohibited this project from being saved:"
-      %ul
-        - @list.errors.full_messages.each do |msg|
-          %li= msg
-  = f.inputs do
-    = f.input :title
-    %h4 Items
-    #items
-      = f.semantic_fields_for :list_items do |list_item|
-        = render 'item_fields', f: list_item
-      .links
-        = link_to_add_association 'add item', f, :list_items
-  = f.actions do
-    = f.action :submit
+  #error_explanation
+  .input-field
+    = f.input :title, "placeholder": "Title"
+  %h4 Items
+  #items
+    = f.semantic_fields_for :list_items do |list_item|
+      = render 'item_fields', f: list_item
+    .links
+      .row
+        .col.s6
+          = link_to_add_association f, :list_items, class: "btn waves-effect light-blue darken-2" do
+            %i.material-icons.left add
+            Add item
+        .col.s6
+          = f.action :submit, button_html: { class: "btn waves-effect light-blue darken-2" }
