--- a/app/views/lists/_list_item_fields.html.haml
+++ b/app/views/lists/_list_item_fields.html.haml
@@ -1,4 +1,6 @@
-.nested-fields
-  = f.inputs do
+.row.nested-fields.collection-item.word-break
+  .col.s11
     = f.input :content
-    = link_to_remove_association "remove item", f
+  .col.s1
+    = link_to_remove_association f do
+      %i.material-icons delete
