--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -17,3 +17,6 @@
         = link_to todos_path, class:"" do
           Todos
           %i.material-icons.left done
+        = link_to feeds_path, class:"" do
+          RSS feeds
+          %i.material-icons.left play_for_work
