--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -19,4 +19,4 @@
           %i.material-icons.left done
         = link_to feeds_path, class:"" do
           RSS feeds
-          %i.material-icons.left play_for_work
+          %i.fa.fa-rss.left
