--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,3 +22,6 @@
 $primary-color: color("blue-grey", "darken-1") !default;
 @import "materialize";
 @import "materialize/extras/nouislider";
+
+@import "font-awesome-sprockets";
+@import "font-awesome";
