--- a/app/views/feeds/show.html.haml
+++ b/app/views/feeds/show.html.haml
@@ -1,12 +1,6 @@
 .row
-  .col.s3.card.orange.lighten-3
-    .feed-name.center-align= @feed.name
-    .feed-url.center-align= @feed.url
-    .center-align= @feed.description
-  .col.s9
+  .col.s3.card.grey.lighten-3
+    = render partial: 'side_show', collection: @feeds, as: :feed
+  .col.s9.card.grey.lighten-3
     .row
-      - @feed.entries.each do |entry|
-        = link_to entry.title, entry.url
-        = entry.published
-        .delimiter
-    
+      = render @feed.entries
