--- a/app/views/lists/index.html.haml
+++ b/app/views/lists/index.html.haml
@@ -3,6 +3,7 @@
     $("#new-list-button").click(function(){
         $("#new-list-form").slideToggle( "slow" );
     });
+    $('.collapsible').collapsible()
   });
 .container
   .row
