Switched whenever to rufus-scheduler

--- a/app/views/feeds/index.html.haml
+++ b/app/views/feeds/index.html.haml
@@ -2,16 +2,6 @@
   .row
     %h4.center-align Subscribed feeds
   .row
-    .col.s12.cards-container
-    %table.responsive-table
-      %thead
-        %tr
-          %th Title
-          %th Url
-          %th Last updated
-      %tbody
-      - @feeds.each do |feed|
-        %tr
-          %td= feed.name
-          %td= clickable_pretty_feed_url(feed.url, feed.id)
-          %td= feed.updated_at
+    = render @feeds
+  .row
+    %h4.center-align Other feeds
