--- a/app/views/feeds/index.html.haml
+++ b/app/views/feeds/index.html.haml
@@ -2,6 +2,6 @@
   .row
     %h4.center-align Subscribed feeds
   .row
-    = render @feeds
+    = render @subscribed_feeds
   .row
     %h4.center-align Other feeds
