--- a/app/views/feeds/_feed.html.haml
+++ b/app/views/feeds/_feed.html.haml
@@ -8,4 +8,5 @@
         = feed.description
       .card-action
         = link_to "Subscribe", "#"
+        = link_to "Details", "#"
         // = feed.url
