--- a/app/views/subscribed_feeds/_subscribed_feed.html.haml
+++ b/app/views/subscribed_feeds/_subscribed_feed.html.haml
@@ -1,11 +1,11 @@
 .col.s6
   .card.horizontal
     .card-image
-      = image_tag "http://placehold.it/200x150"
+      = image_tag "http://placehold.it/200x150", class: 'img-resposive'
     .card-stacked
       .card-content
         = subscribed_feed.feed.name
-        // = feed.description
+        = subscribed_feed.feed.description
       .card-action
         = link_to "Subscribe", "#"
-        // = feed.url
+        = link_to "Details", "#"
