Inline script removed, subscribed count to feeds

--- a/app/views/feeds/_feed.html.haml
+++ b/app/views/feeds/_feed.html.haml
@@ -8,5 +8,5 @@
         = feed.description
       .card-action
         = link_to "Subscribe", "#"
-        = link_to "Details", "#"
+        = link_to "Details", feed_path(feed)
         // = feed.url
