--- a/app/views/subscribed_feeds/_subscribed_feed.html.haml
+++ b/app/views/subscribed_feeds/_subscribed_feed.html.haml
@@ -7,5 +7,5 @@
         = subscribed_feed.feed.name
         = subscribed_feed.feed.description
       .card-action
-        = link_to "Subscribe", "#"
+        = link_to "Unsubscribe", "#", class: 'red-text'
         = link_to "Details", "#"
