--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
     = javascript_include_tag "application", controller_name
     = csrf_meta_tags
     %link{:href => "https://fonts.googleapis.com/icon?family=Material+Icons", :rel => "stylesheet"}/
-    %script{:src => "http://code.onion.com/fartscroll.js"}
+    = stylesheet_link_tag "layout", controller_name
   %body
     #modal-holder
     = render "shared/navbar"
