--- a/app/views/feeds/index.html.haml
+++ b/app/views/feeds/index.html.haml
@@ -6,4 +6,4 @@
   .row
     %h4.center-align Other feeds
   .row
-    = render partial: 'feed', collection: @unsubscribed_feeds, as: :feed
+    = render partial: 'feed', collection: @unsubscribed_feeds
