--- a/app/views/feeds/_feed.html.haml
+++ b/app/views/feeds/_feed.html.haml
@@ -8,6 +8,9 @@
           = feed.name
           = feed.description
         .card-action
-          = button_tag "Subscribe", class: 'subscribe-feed-button', data: { url: subscribed_feeds_path, feedid: feed.id, disable_with: 'Subscribing' }, remote: true
+          = button_tag "Subscribe", class: 'subscribe-feed-button green-text', data: { url: subscribed_feeds_path, feedid: feed.id, disable_with: 'Subscribing' }, remote: true
           = link_to "Details", feed_path(feed)
           // = feed.url
+          
+
+            
