--- a/app/views/feeds/index.html.haml
+++ b/app/views/feeds/index.html.haml
@@ -1,9 +1,7 @@
 .container
   #subscribed-feeds.row
-    %h4.center-align Subscribed feeds
-  .row
+    %h5.center-align Subscribed feeds
     = render @subscribed_feeds
-  .row
-    %h4.center-align Other feeds
-  .row
+  #unsubscribed-feeds.row
+    %h5.center-align Other feeds
     = render partial: 'feed', collection: @unsubscribed_feeds
