Ugliest jquery code ever, subscribe and unsubscribe error handling

--- a/app/assets/stylesheets/feeds.css.scss
+++ b/app/assets/stylesheets/feeds.css.scss
@@ -65,6 +65,10 @@
   }
 }
 
+.align-fix {
+  .unsubscribe-feed-button { float: left; }
+}
+
 .hvr-underline-from-left {
   display: inline-block;
   vertical-align: middle;
