Removed webkit autofill color

--- a/app/views/welcome/home.html.haml
+++ b/app/views/welcome/home.html.haml
@@ -4,7 +4,7 @@
   .col.s7
     = image_tag 'http://placehold.it/2000x500', class: 'responsive-img'
     .col.s2.red
-      s
+      = image_tag 'https://blog.mariusschulz.com/content/images/css_shutter.gif'
     .col.s7.blue
       a
     .col.s3
