--- a/app/views/todos/index.html.haml
+++ b/app/views/todos/index.html.haml
@@ -1,5 +1,7 @@
-#todos
-= render @todos
+.container
+  .row
+    #todos
+    = render @todos
 
 = link_to "New todo list","#", id: "new-todo"
 #new_todo_form
