Todos replaced with events, simple calendar added

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -9,3 +9,14 @@ body {
 .content {
   flex: 1;
 }
+
+.card-button {
+  border-color: none;
+  border-width: 0;
+  background-color: initial;
+  text-transform: uppercase;
+  &:focus {
+    outline: none;
+    background-color: initial;
+  }
+}
